--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "bower_components",
     ".jshintrc"
   ],
-  "devDependencies": {
+  "dependencies": {
     "bootstrap": "~3.3.4",
     "bootstrap-material-design": "~0.3.0",
     "angular": "~1.4.0",
@@ -29,5 +29,7 @@
     "angular-touch": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-i18n": "~1.4.0"
+    "firebase": "~2.2.7",
+    "angularfire": "~1.1.1"
   }
 }
